<resources>
    <string name="app_name">Pattaya Tour</string>
    <string name="welcome">Welcome</string>
    <string name="get_here">Getting Here</string>
    <string name="shopping">Shopping</string>
    <string name="accommodations">Lodging</string>
    <string name="family_activity">Family Fun</string>
    <string name="adult_activity">Adult Fun</string>
    <string name="nav_header">Pattaya Thailand</string>
    <string name="information">Info</string>
    <string name="welcome_message">Welcome to Thailand, the Land of Smiles.\n
        \nWe will be going on an adventure to Pattaya City, located in the
        Chonburi Province south of Bangkok. \n \nSo buckle up it\'s going
        to be a wild ride, or something like that.</string>
    <string name="welcome_thai">ยินดีต้อนรับ</string>
    <string name="welcome_english">(Welcome)</string>
    <string name="warning_warning">Warning!!!</string>
    <string name="warning">The Adult Fun section is information on Pattaya\'s sex industry. This may not be for everyone. So, if
    you\'re homophobic or just a frigid person in general you might want to avoid this section. Otherwise ENJOY!!!</string>
    <string name="airport">Airport</string>
    <string name="taxis">Taxi</string>
    <string name="bus">Bus</string>
    <string name="city">City</string>
    <string name="web_site">Web Site</string>
    <string name="suvarnabhumi">Suvarnabhumi</string>
    <string name="donmueang">Don Mueang</string>
    <string name="utapao">Utapao</string>
    <string name="all_airports">All Airports</string>
    <string name="bangkok">Bangkok</string>
    <string name="rayong">Rayong</string>
    <string name="bell_travel">Bell Travel</string>
    <string name="bus_ekamai">Ekamai Terminal</string>
    <string name="bangkok_taxi">Bangkok Taxi24</string>
    <string name="smile_taxi">Smile Taxi Service</string>
    <string name="web_utapao">http://www.utapao.com</string>
    <string name="web_airports_bkk">http://www.airportthai.co.th</string>
    <string name="web_bell_travel">http://www.belltravelservice.com</string>
    <string name="web_ekamai">http://www.busonlineticket.co.th</string>
    <string name="web_smile_taxi">http://www.smiletaxiservice.com</string>
    <string name="web_bkk_taxi">http://huahin.bangkoktaxi24.com</string>
    <string name="airport_info_airports_header">Airports:</string>
    <string name="airport_info_taxi_header">Taxis:</string>
    <string name="airport_info_bus_header">Buses:</string>
    <string name="airport_info_airport_text">Suvarnabuhmi is Thailands biggest and main airport. It is located on the
    south end of Bangkok going towards Pattaya, which is convenient for our purpose. \n\n I have never had any issues coming
    through any of the airports on the list. If you have your arrival card filled out in advance, then you should not have
    any problems. Customs is also a breeze, if you aren\'t an idiot. \n\nWhat I really like about Suvarnabuhmi is that all
    transportation is easy to get to. For taxis and buses, just go down to level 1 from the arrivals level (level 2), and
    there they are. \nI don\'t know a whole lot about the other airports because I never took a taxi or a bus from either
    one. However, the buses and taxis are pretty much the same everywhere in Thailand.</string>
    <string name="airport_info_taxi_text">From level 1 you can get a taxi to Pattaya or the Ekamai Bus Terminal. There are taxis,
    vip limos and vans to choose from. It all depends on your budget. \n\nIt all depends on what kind of time you have and what
    your budget is. A taxi to Pattaya from Suvarnabuhmi will cost about 1,500 baht. One from Don Mueang will cost about 2,000
    baht. and one from Utapao will cost around 1,000 baht.</string>
    <string name="airport_info_bus_text">You can also go down one more level and take the train into Bangkok then
    get off at the end of the line (Phayatai Station), get on the Sky Train. Take the Sky Train to Ekamai and there\'s the bus
    station. \n\nThe bus from the airport is about 160 baht I think, but they don\'t run 24 hours. \n\nThe Ekamai way by using the airport
    train and Sky Train will cost about 250 baht total, however, this is the slowest route and the last bus is at 10 or 11 p.m. \n\n
    </string>
    <string name="shopping_center">Shopping Center</string>
    <string name="shopping_location">Location</string>
    <string name="shopping_description">Description</string>
    <string name="shopping_tab">Shopping</string>
    <string name="avenue">The Avenue Mall</string>
    <string name="big_c_extra">Big C Extra</string>
    <string name="central">Central Festival Mall</string>
    <string name="central_center">Central Center Mall</string>
    <string name="floating_market">Floating Market</string>
    <string name="harbor_mall">Harbor Mall</string>
    <string name="mikes">Mike Shopping Mall</string>
    <string name="night_bazaar">Night Bazaar</string>
    <string name="night_market">Night Market</string>
    <string name="outlet_mall">Outlet Mall</string>
    <string name="spacer"> </string>
    <string name="royal_garden">Royal Garden Mall</string>
    <string name="terminal">Terminal 21 Mall - Coming Soon</string>
    <string name="tukcom">IT City</string>
    <string name="second_rd">Second Road</string>
    <string name="central_rd">Pattaya Klang</string>
    <string name="beach_rd">Beach Road</string>
    <string name="sukhumvit">Sukhumvit Road to Rayong</string>
    <string name="thepprasit_rd">Thepprasit Road</string>
    <string name="outlet_rd">Sukhumvit and Thepprasit Intersection</string>
    <string name="pattaya_north">Pattaya North and Second Road</string>
    <string name="pattaya_south">Pattaya South Road</string>
    <string name="shopping_info">There\'s a lot of shopping in and around Pattaya. We have so many malls and markets, you can
    find pretty much anything you are looking for. Not just the malls, but there are tons of little shops that have different
    items in them. \n\nThe markets are everywhere, depending on what day it is. There are several day markets and then you have
    the night ones. \n\nThepprasit is probably the biggest and well known night markets. It is open on Thursday through Sunday.
    \n\nThe malls are open everyday. Of course, nothing really opens here until 10 or 11 in the morning, so make sure to check
    the times. \n\nIn the malls the stores are name brand and of good quality just like anywhere else in the world. Of course,
    the same cannot be said for the smaller shops and markets. You get what you pay for. \n\nWe also have a lot of grocery stores
    in case you are staying for a long time. We have a great bulk item store Makro. \n\nEnjoy shopping!! \n</string>
    <string name="avenue_description">The Avenue has some small shops, a gym and a very well stocked grocery store Villa Market mainly
    catering to foreigners with foreign food.</string>
    <string name="big_c_extra_description">Big C Extra is comparable to a Walmart super store. They have food and other things.
    There is also a hardware store like Home Depot, food court and restaurants.</string>
    <string name="central_description">Central is the biggest mall in Pattaya at this time. It has six floors with brand name,
    high end shopping, a bowling alley, awesome movie theatre, two floors of restaurants, a food court, banks.</string>
    <string name="central_center_description">Central Center has a Big C similar to Big C Extra. It has just received a
    makeover, and is improved. It has a movie theatre, resuarants, and stores. The Hilton sits on top of the mall.</string>
    <string name="floating_description">The Floating Market is outside of town going towards Rayong. It is a big tourist
    attraction as it hosts local made crafts and souvenirs. Plenty of resaurants too. Sometimes it\'s a bit crowded with
    all the bus tours.</string>
    <string name="harbor_description">Harbor Pattaya is finally something for kids. It has some shopping, resaurants, a food
    court. The biggest attractions are for kids. They have Harbor Land which is a big soft play area, ice skating, wall climbing,
    snow land, roller land, trampoline jumping, an arcade, different schools. It was a long time coming, we needed it.</string>
    <string name="mike_description">Mike\'s has been around for a long time. It has some outlet type shopping. Mostly tourist
    stuff inside. It\'s like four floors of shopping, a few places to eat. That\'s about it.</string>
    <string name="night_bazaar_description">A huge area with tourist trinkets.</string>
    <string name="night_market_description">The night market on Thepprasit is a big and crowded place. It has very good deals
    on clothes. There is a whole section for food, which is very good. It\'s crowded but worth the trip.</string>
    <string name="outlet_description">The Outlet Mall is next to the night market. The mall has great deals on brand name clothes,
    shoes and some other stuff.</string>
    <string name="royal_description">Royal Garden Mall is one of the oldest malls here. It has a movie theatre, resuarants,
    shopping, and Ripley\'s. I stayed here when it was Royal Garden hotel in \'85. Hehehe</string>
    <string name="terminal_description">Our soon to be newest mall. It will have plenty of shopping. Not sure what else will
    be in there.</string>
    <string name="tukcom_description">Tukcom or IT City is where you go for all your IT needs. It has everything you could
    need. Banks, phones, lots of phones, computers, cctv cameras. There is a floor for gaming, videos, music and software for 
    very cheap. You can get Xbox360 games for 100 baht.</string>
    <string name="avenue_web">https://pattayasanook.com/pattaya-avenue-shopping-mall/</string>
    <string name="big_c_extra_web">https://pattayasanook.com/big-c-extra/</string>
    <string name="central_web">http://www.centralfestival.co.th/index.php</string>
    <string name="central_center_web">https://pattayasanook.com/central-center-pattaya/</string>
    <string name="floating_web">http://www.pattayafloatingmarket.com/</string>
    <string name="mikes_web">http://www.mikeshoppingmall.com/</string>
    <string name="night_bazaar_web">http://www.pattayanightbazaar.com/</string>
    <string name="night_market_web">https://www.tripadvisor.com/Attraction_Review-g293919-d4554040-Reviews-Thepprasit_Road_Nightmarket-Pattaya_Chonburi_Province.html</string>
    <string name="outlet_web">http://www.outletmallthailand.com/our_branch/1</string>
    <string name="royal_web">http://thailand-explored.com/royal-garden-plaza-pattaya/</string>
    <string name="terminal_web">http://www.terminal21.co.th/pattaya/th/home/</string>
    <string name="tukcom_web">https://www.facebook.com/TukcomNews</string>
    <string name="hotel_tab">Hotels</string>
    <string name="family_activity_activity">Activity</string>
    <string name="family_location">Activity Location</string>
    <string name="family_description">Activity Description</string>
    <string name="adult_soi_text_view">Soi</string>
    <string name="adult_sexes_text_view">Sexes</string>
    <string name="adult_description_text_view">Description</string>
</resources>