<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/family_text_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:minHeight="@dimen/list_item_height_travel"
    android:orientation="vertical">

    <TextView
        android:id="@+id/family_activity_text_view"
        style="@style/ShoppingTextView"
        android:text="@string/family_activity_activity" />

    <TextView
        android:id="@+id/family_location_text_view"
        style="@style/ShoppingTextView"
        android:layout_below="@id/family_activity_text_view"
        android:text="@string/family_location" />

    <TextView
        android:id="@+id/family_description_text_view"
        style="@style/ShoppingTextView"
        android:layout_below="@id/family_location_text_view"
        android:text="@string/family_description" />

    <ImageView
        android:id="@+id/family_activity_image_view"
        android:contentDescription="@string/family_activity"
        style="@style/ShoppingImageView"
        android:layout_below="@id/family_description_text_view" />

</RelativeLayout>